tests/types/errors/return_type_mismatch.mog
fn answer() i32 {
    return "nope"
}
